--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -16,29 +16,24 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-          
+
           # Options
           user: khamseaffan
           template: classic
-          base: header, activity, community, repositories, metadata
+          base: header, repositories
           config_timezone: America/New_York
           
           # Tokyo Night Theme Colors
           config_padding: 0, 8 + 11%
-          # Color references: #1a1b26 (bg), #7aa2f7 (primary), #a9b1d6 (text)
-          config_order: base.header, base.activity+community, base.repositories, lines, traffic
+          config_order: base.header, base.repositories, languages, lines
           
           # Plugins
           plugin_lines: yes
-          plugin_traffic: yes
-          plugin_traffic_views: yes
           
+          # Languages - Compact View
           plugin_languages: yes
           plugin_languages_ignored: html, css, tex, less, dockerfile, makefile, qmake, lex, cmake, shell, gnuplot
-          plugin_languages_limit: 4
+          plugin_languages_limit: 8
           plugin_languages_sections: most-used
-          
-          # Detailed Stack/Achievements
-          plugin_achievements: yes
-          plugin_achievements_display: compact
-          plugin_achievements_threshold: X
+          plugin_languages_colors: github
+          plugin_languages_threshold: 0%
